# ltchiptool-mcp

./: CLAUDE.md  README.md  pyproject.toml
src/ltchiptool_mcp/: __init__.py  __main__.py  families.py  parsers.py  runner.py  safety.py  server.py  tools.py
tests/: conftest.py  test_families.py  test_integration_bk7231.py  test_parsers.py  test_rename_guard.py  test_runner.py  test_safety.py  test_server_dispatch.py  test_tools.py
tests/fixtures/: dissect_dump_paired.txt  flash_info_bk7231n.txt  list_boards.txt
