[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ltchiptool-mcp"
version = "0.1.0"
description = "MCP server wrapping ltchiptool + bk7231tools for non-ESP chip extraction (BK7231 family, extensible)"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "ltchiptool>=4.14",
]

# bk7231tools is a transitive dependency of ltchiptool.
# No system packages required beyond a working Python and dialout group membership.

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "hardware: requires real BK7231 target on USB serial",
]
